--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       --base: #ffc600;
       --spacing: 10px;
       --blur: 10px;
+      /* challenged myself with adding one more styling */
       --border-radius: 10px;
     }
 
@@ -38,6 +39,7 @@
       padding: var(--spacing);
       background: var(--base);
       filter: blur(var(--blur));
+      /* added border radius to challenge myself further */
       border-radius: var(--border-radius);
     }
 
